apps/backend/martin-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: martin-server
  namespace: jku-cloud-computing
  labels:
    app: martin-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: martin-server
  template:
    metadata:
      labels:
        app: martin-server
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: martin-server
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: martin
        image: ghcr.io/maplibre/martin:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "150m"
          limits:
            cpu: "350m"
        volumeMounts:
        - name: martin-cache
          mountPath: /cache # Mount for temporary caching
      volumes:
      - name: martin-cache
        emptyDir: 
          medium: "Memory" # I think this uses RAM for storing temporary files
---
apiVersion: v1
kind: Service
metadata:
  name: martin-service
  namespace: jku-cloud-computing
spec:
  selector:
    app: martin-server
  ports:
    - name: http-martin
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
