apps/backend/martin-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: jku-cloud-computing
spec:
  rules:
  - host: api.martin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: martin-service
            port:
              number: 80
